Bug 1527881 - fix compilation error in Rooted<GCVector<T>>::emplaceBack. r=sfink